--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -17,7 +17,6 @@
 */
 .navbar-brand {
 	font-size: 2.0rem;
-	padding-left: 12px;
 	margin: 0;
 }
 
